--- a/render.yaml
+++ b/render.yaml
@@ -4,3 +4,7 @@ services:
     env: node
     buildCommand: npm install
     startCommand: npm start
+    buildFilter:
+      paths:
+        - package.json
+        - package-lock.json
