--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 GOOGLE_API_KEY=AIzaSyB9C4pGA-zgyejPxKcXqvxrVhc_nxthSz4
 EMAIL_USER=yairmbenabou@gmail.com
-EMAIL_PASS=tdnf deus hruv npxh
+EMAIL_PASS=gsty xwgk igfs pyoo
+
 
