--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "our-family-tree",
   "version": "1.0.0",
+  "description": "עץ משפחה אינטראקטיבי עם שדרוגים מתקדמים",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
-    "express-session": "^1.17.3"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5",
+    "nodemailer": "^6.9.8",
+    "path": "^0.12.7"
   }
 }
