--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.9.8",
     "path": "^0.12.7",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "uuid": "^9.0.0"
   }
 }
