--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vitalets/google-translate-api": "^8.0.0",
+    npm install @google-cloud/translate
     "axios": "^1.6.7",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
