--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "our-family-tree",
-  "version": "1.1.2",
-  "description": "עץ משפחה אינטראקטיבי עם שדרוגים מתקדמים",
+  "version": "1.1.3",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js"
   },
   "dependencies": {
-    "@vitalets/google-translate-api": "^8.0.0",
-    npm install @google-cloud/translate
-    "axios": "^1.6.7",
-    "bcrypt": "^5.1.0",
+    "@google-cloud/translate": "^8.0.0",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "fs": "0.0.1-security",
-    "multer": "^1.4.4-lts.1",
-    "nodemailer": "^6.9.8",
-    "openai": "^4.38.2",
-    "path": "^0.12.7",
-    "pdf-parse": "^1.1.1",
-    "tesseract.js": "^4.0.2",
-    "uuid": "^9.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
