--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,9 @@ services:
   - type: web
     name: our-family-tree
     env: node
-    buildCommand: "npm install"
-    startCommand: "npm start"
+    buildCommand: npm install
+    startCommand: npm start
     plan: free
+    envVars:
+      - key: NODE_VERSION
+        value: 18
