--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "our-family-tree",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js"
@@ -14,12 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.6.3",
-    "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1"
+    "multer": "^1.4.5-lts.2",
+    "pdf-parse": "^1.1.1",
+    "uuid": "^9.0.0"
   },
   "engines": {
     "node": ">=18"
