--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "@google-cloud/translate": "^8.0.0",
-    "tesseract.js": "^4.0.2"
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -22,7 +21,8 @@
     "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.2",
     "pdf-parse": "^1.1.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "tesseract.js": "^4.0.2"
   },
   "engines": {
     "node": ">=18"
