--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node src/server.js"
   },
-  "dependencies": {
-    "@google-cloud/translate": "^8.0.0",
+"dependencies": {
+  "@google/generative-ai": "^0.6.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
