--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node src/server.js"
   },
 "dependencies": {
-  "@google/generative-ai": "^0.6.0",
+  "@google-cloud/translate": "^7.2.0",  
+  ...
+}
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
