--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "our-family-tree",
   "version": "1.1.4",
+  "description": "Family Tree Web App with AI and Translation",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js"
   },
-"dependencies": {
-  "@google-cloud/translate": "^7.2.0",  
-  ...
-}
+  "dependencies": {
+    "@google-cloud/translate": "^8.0.0",
+    "@google/generative-ai": "^0.7.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -16,17 +16,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.6.3",
-    "multer": "^1.4.5-lts.2",
-    "pdf-parse": "^1.1.1",
-    "uuid": "^9.0.0",
-    "tesseract.js": "^4.0.2"
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
