--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,9 @@ services:
     name: our-family-tree
     env: node
     buildCommand: npm install
-    startCommand: node src/server.js
+    startCommand: npm start
     nodeVersion: 20
     autoDeploy: true
+    envVars:
+      - key: NODE_ENV
+        value: production
