--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
   "name": "our-family-tree",
-  "version": "1.1.4",
-  "description": "Family Tree Web App with AI and Translation",
+  "version": "1.0.0",
+  "description": "Private interactive family tree with Google AI integration",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js"
   },
+  "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@google-cloud/translate": "^8.0.0",
-    "@google/generative-ai": "^0.7.0",
-    "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
+    "@google/generative-ai": "^0.5.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "fs": "0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
-    "moment": "^2.29.4",
-    "mongoose": "^7.6.3",
-    "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.17.3",
+    "fs-extra": "^11.2.0",
+    "nodemailer": "^6.9.13",
+    "path": "^0.12.7"
+  }
 }
