--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
   "name": "our-family-tree",
   "version": "1.0.0",
-  "description": "Private interactive family tree with Google AI integration",
+  "description": "",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js"
   },
-  "type": "module",
+  "dependencies": {
+    "express": "^4.19.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.2",
+    "ejs": "^3.1.9",
+    "bcrypt": "^5.1.1",
+    "nodemailer": "^6.9.10",
+    "body-parser": "^1.20.2",
+    "uuid": "^9.0.1"
+  },
   "engines": {
     "node": ">=20.0.0"
-  },
-  "dependencies": {
-    "@google-cloud/translate": "^8.0.0",
-    "@google/generative-ai": "^0.5.0",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-session": "^1.17.3",
-    "fs-extra": "^11.2.0",
-    "nodemailer": "^6.9.13",
-    "path": "^0.12.7"
   }
 }
