--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "our-family-tree",
   "version": "1.0.0",
-  "description": "Family tree website with user management, authentication and chat",
+  "description": "מערכת אינטראקטיבית לאילן יוחסין",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "mongoose": "^8.3.1",
+    "nodemailer": "^6.9.10",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=20.0.0"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-session": "^1.17.4",
-    "nodemailer": "^6.9.9",
-    "uuid": "^9.0.1"
   }
 }
