--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
   "name": "our-family-tree",
   "version": "1.0.0",
-  "description": "מערכת אינטראקטיבית לאילן יוחסין",
+  "description": "A family tree management app with Google AI integration",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "mongoose": "^8.3.1",
-    "nodemailer": "^6.9.10",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "start": "node src/server.js"
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "dependencies": {
+    "@google-cloud/translate": "^8.0.0",
+    "bcrypt": "^5.1.0",
+    "express": "^4.19.2",
+    "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "uuid": "^9.0.0"
   }
 }
