--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "our-family-tree",
   "version": "1.0.0",
-  "description": "A family tree management app with Google AI integration",
+  "description": "A family tree management app with OCR and AI support",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js"
@@ -14,8 +14,9 @@
     "bcrypt": "^5.1.0",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.0",
     "pdf-parse": "^1.1.1",
+    "tesseract.js": "^4.1.1",
     "uuid": "^9.0.0"
   }
 }
