--- a/package.json
+++ b/package.json
@@ -1,32 +1,24 @@
 {
   "name": "our-family-tree",
   "version": "1.0.0",
-  "description": "אתר אינטראקטיבי לעץ משפחה",
+  "description": "מערכת אילן יוחסין משפחתי",
   "main": "src/server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node src/server.js"
   },
-  "keywords": [],
-  "author": "Yair Ben Abou",
-  "license": "MIT",
-  "type": "commonjs",
   "engines": {
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.5.0",
-    "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.4",
-    "form-data": "^4.0.0",
-    "jsonwebtoken": "^9.0.2",
+    "express": "^4.19.2",
+    "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.13",
-    "sqlite3": "^5.1.7",
-    "uuid": "^9.0.1"
+    "nodemailer": "^6.9.12",
+    "sqlite3": "^5.1.6"
   }
 }
