--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
   "name": "our-family-tree",
   "version": "1.0.0",
-  "description": "מערכת אילן יוחסין משפחתי",
+  "description": "אתר עץ משפחתי עם כל הפיצ'רים והחיבורים",
   "main": "src/server.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "engines": {
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.12",
-    "sqlite3": "^5.1.6"
-  }
+    "pdf-parse": "^1.1.1",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "keywords": [],
+  "author": "Yair Ben Abou",
+  "license": "MIT"
 }
