--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
-    "pdf-parse": "^1.1.1" 
+    "pdf-parse": "^1.1.1",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
