--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "pdf-parse": "^1.1.1",
+    "tesseract.js": "^4.0.2"
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
