--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "pdf-parse": "^1.1.1",
-    "tesseract.js": "^4.0.2"
+    "tesseract.js": "^4.0.2",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "uuid": "^9.0.1",
     "@google-cloud/translate": "^8.0.3",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0",
   }
 }
