--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Yair Ben Abou",
   "license": "MIT",
   "dependencies": {
-    "@google/generative-ai": "^VERSION"
+    "@google/generative-ai": "^0.2.2"
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
