--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
   },
   "author": "Yair Ben Abou",
   "license": "MIT",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "@google/generative-ai": "^0.2.2"
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
-    "pdf-parse": "^1.1.1",
-    "tesseract.js": "^4.0.2",
     "express-session": "^1.17.3",
+    "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "pdf-parse": "^1.1.1",
+    "tesseract.js": "^4.0.2",
     "uuid": "^9.0.1",
     "@google-cloud/translate": "^8.0.3",
-    "fs-extra": "^11.2.0"
+    "@google/generative-ai": "^0.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
-  },
-  "engines": {
-    "node": ">=20.0.0"
   }
 }
 
