--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-  "node-cron"
+      "node-cron": "^3.0.3",
     "pdf-parse": "^1.1.1",
     "tesseract.js": "^4.0.2",
     "uuid": "^9.0.1",
