--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Yair Ben Abou",
   "license": "MIT",
   "dependencies": {
-    sqlite3 better-sqlite3
+    "sqlite3": "*",
+  "better-sqlite3": "*",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
