--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
 GOOGLE_API_KEY=AIzaSyB9C4pGA-zgyejPxKcXqvxrVhc_nxthSz4
 EMAIL_USER=yairmbenabou@gmail.com
 EMAIL_PASS=gsty xwgk igfs pyoo
-
+ apiKey: "AIzaSyAID_kPGA6Khczh0lIgd7E13LJS76JJ9nI",
+  authDomain: "mailbox-e0ce2.firebaseapp.com",
+  projectId: "mailbox-e0ce2",
+  storageBucket: "mailbox-e0ce2.firebasestorage.app",
+  messagingSenderId: "199399854104",
+  appId: "1:199399854104:web:6aec488e6aeee0dec3736d",
+  measurementId: "G-V3CSEQY5CR"
+};
 
