--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "sqlite3": "*",
   "better-sqlite3": "*",
+     "@supabase/supabase-js": "^2.0.0"
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
