--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "sqlite3": "*",
   "better-sqlite3": "*",
-     "@supabase/supabase-js": "^2.0.0"
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -31,7 +30,8 @@
     "tesseract.js": "^4.0.2",
     "uuid": "^9.0.1",
     "@google-cloud/translate": "^8.0.3",
-    "@google/generative-ai": "^0.3.0"
+    "@google/generative-ai": "^0.3.0",
+     "@supabase/supabase-js": "^2.0.0",
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
