--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
+    "firebase-admin": "^12.0.0",
     "nodemailer": "^6.9.13",
     "node-cron": "^3.0.3",
     "pg": "^8.7.3",
