--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-session": "^1.17.3",
         "compression": "^1.7.4",
     "helmet": "^6.0.0",
-    "javascript-obfuscator": "^5.0.0"
+    "javascript-obfuscator": "^5.0.0",
     "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
     "firebase-admin": "^12.0.0",
